--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context="com.meli.trainingml.MainActivity$PlaceholderFragment" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textCondition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/select_product" />
@@ -18,7 +18,7 @@
         android:id="@+id/editTextProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/textCondition"
         android:layout_marginTop="17dp"
         android:hint="@string/select_product"
         android:ems="10" >
