--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -18,10 +18,13 @@
         android:id="@+id/editTextProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textCondition"
         android:layout_below="@+id/textCondition"
         android:layout_marginTop="17dp"
-        android:hint="@string/select_product"
-        android:ems="10" >
+        android:layout_toLeftOf="@+id/btnSearch"
+        android:ems="10"
+        android:hint="@string/select_product" >
+
         <requestFocus />
     </EditText>
 
@@ -32,7 +35,6 @@
         android:layout_alignBaseline="@+id/editTextProduct"
         android:layout_alignBottom="@+id/editTextProduct"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="36dp"
         android:text="@string/action_search" />
 
 </RelativeLayout>
