--- a/res/layout-land/list_item_row.xml
+++ b/res/layout-land/list_item_row.xml
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textTitle"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/textCondition"
         android:text="@string/app_name" />
 
 </RelativeLayout>
