--- a/widgets/res/layout/widget_main.xml
+++ b/widgets/res/layout/widget_main.xml
@@ -13,22 +13,21 @@
        android:orientation="horizontal" 
        android:padding="@dimen/widget_margin" >
 
-    <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="50dp"
-       android:background="@drawable/abc_textfield_searchview_holo_dark"
-       android:layout_weight=".55"
-       android:layout_marginLeft="@dimen/control_margin" 
-       android:orientation="horizontal" >
-	   
-	</LinearLayout>
-  
+    <Button
+        android:id="@+id/btnCategories"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+	   	android:background="@drawable/abc_textfield_searchview_holo_dark"
+	   	android:layout_weight=".80"
+	   	android:layout_marginLeft="@dimen/control_margin" 
+        />
   	<ImageButton
         android:id="@+id/btnSearch"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight=".40"
+        android:layout_weight=".15"
         android:background="@drawable/appwidget_button_right"
         android:layout_marginRight="@dimen/control_margin" 
         android:src="@drawable/abc_ic_search" />
