* trabajando con el widget

--- a/widgets/app/src/main/res/layout/widget_main.xml
+++ b/widgets/app/src/main/res/layout/widget_main.xml
@@ -4,24 +4,25 @@
     android:layout_height="match_parent"
     android:background="@drawable/appwidget_dark_bg"
     android:orientation="vertical"
-	android:padding="@dimen/widget_margin" >
+	android:padding="@dimen/widget_margin"
+    android:weightSum="1">
     
     
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:orientation="horizontal" 
+       android:orientation="horizontal"
        android:padding="@dimen/widget_margin" >
 
-    <Button
-        android:id="@+id/btnCategories"
+    <TextView
+        android:id="@+id/textCategories"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 	   	android:background="@drawable/abc_spinner_ab_holo_dark"
 	   	android:layout_weight=".80"
-	   	android:layout_marginLeft="@dimen/control_margin" 
-        />
+	   	android:layout_marginLeft="@dimen/control_margin"
+        android:text="texto del textview" />
   	<ImageButton
         android:id="@+id/btnSearch"
         style="?android:attr/buttonStyleSmall"
@@ -66,5 +67,5 @@
         android:layout_weight=".40"
         android:text="@string/features" />
   </LinearLayout>
-  	
+
 </LinearLayout>
