* agregando activiy para buscar items

--- a/widgets/app/src/main/res/layout/widget_main.xml
+++ b/widgets/app/src/main/res/layout/widget_main.xml
@@ -67,5 +67,11 @@
         android:layout_weight=".40"
         android:text="@string/features" />
   </LinearLayout>
+  <StackView
+        android:id="@+id/stack_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:loopViews="true" />
 
 </LinearLayout>
